Fixed skills logo alignment
Now unity logo is SVG.

--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
 }
 
 .features-icons-icon{
-    font-size: 3rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
     margin-bottom: 1rem;
-    color: #0080ff;
 }
